Fixes Window.vue tabline reactivity (probably)

--- a/electron/index.html
+++ b/electron/index.html
@@ -10,6 +10,7 @@
     <link href="fa.css" rel="stylesheet" />
   </head>
   <body>
+    <h1>remove me!!!!</h1>
     <div id="app"></div>
     <script type="text/javascript" src="common.js"></script>
     <script type="text/javascript" src="chat.js"></script>
