--- a/electron/index.html
+++ b/electron/index.html
@@ -6,11 +6,10 @@
       http-equiv="Content-Security-Policy"
       content="default-src 'self' 'unsafe-inline'; img-src file: data: https://static.f-list.net http://static.f-list.net https://iili.io https://static1.e621.net https://i.imgur.com https://freeimage.host https://v3.redgifs.com https://cdn.imgchest.com; connect-src *"
     />
-    <title>F-Chat</title>
+    <title>Horizont</title>
     <link href="fa.css" rel="stylesheet" />
   </head>
   <body>
-    <h1>remove me!!!!</h1>
     <div id="app"></div>
     <script type="text/javascript" src="common.js"></script>
     <script type="text/javascript" src="chat.js"></script>
