--- a/electron/about.html
+++ b/electron/about.html
@@ -1,169 +1,17 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>About Horizon</title>
-    <style>
-      body {
-        font-family:
-          -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-          Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        margin: 0;
-        padding: 20px;
-        color: #dcdcdc;
-        text-align: center;
-        background-color: #1c191c;
-        overflow: hidden;
-      }
-
-      .container {
-        max-width: 360px;
-        margin: 0 auto;
-      }
-
-      h1 {
-        margin: 0 0 5px 0;
-        font-size: 18px;
-        font-weight: 500;
-      }
-
-      p {
-        margin: 5px 0;
-        color: #b8b8b8;
-        font-size: 14px;
-      }
-
-      a {
-        color: #7c57af;
-        text-decoration: none;
-      }
-
-      a:hover {
-        text-decoration: underline;
-      }
-
-      .version-info {
-        margin-top: 15px;
-        font-size: 12px;
-        color: #888;
-      }
-
-      .heart {
-        animation: heartbeat 1.5s ease-in-out infinite;
-        display: inline-block;
-      }
-
-      @keyframes heartbeat {
-        0% {
-          transform: scale(1);
-        }
-        14% {
-          transform: scale(1.3);
-        }
-        28% {
-          transform: scale(1);
-        }
-        42% {
-          transform: scale(1.3);
-        }
-        70% {
-          transform: scale(1);
-        }
-      }
-
-      .image-bg {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        width: 120px;
-        height: 120px;
-        border-radius: 50%;
-        transform: translate(-50%, -50%);
-        background-image: linear-gradient(
-          -2deg,
-          #1b0f30 5%,
-          #a0487e 19%,
-          #ffa978 79%
-        );
-        z-index: -1;
-        filter: blur(20px);
-      }
-
-      .image-container {
-        position: relative;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 120px;
-        height: 120px;
-        margin: 0 auto 10px auto;
-      }
-
-      .app-logo {
-        width: 80px;
-        height: 80px;
-        z-index: 1;
-      }
-    </style>
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self' 'unsafe-inline'; img-src file: data: https://static.f-list.net"
+    />
+    <title>Horizon</title>
+    <link href="fa.css" rel="stylesheet" />
   </head>
   <body>
-    <div class="container">
-      <div class="image-container">
-        <div class="image-bg"></div>
-        <img alt="Horizon Logo" class="app-logo" />
-      </div>
-      <h1>Horizon</h1>
-      <p>A modern F-Chat client</p>
-
-      <div class="version-info">
-        <p>Version: <span id="app-version">loading...</span></p>
-        <p>Electron: <span id="electron-version">loading...</span></p>
-        <p>Chrome: <span id="chrome-version">loading...</span></p>
-        <p>Node.js: <span id="node-version">loading...</span></p>
-      </div>
-
-      <p>
-        <a href="https://github.com/Fchat-Horizon/Horizon" target="_blank"
-          >GitHub Repository</a
-        >
-        |
-        <a
-          href="https://github.com/Fchat-Horizon/Horizon/blob/main/CONTRIBUTORS.md"
-          target="_blank"
-          >Contributors</a
-        >
-      </p>
-
-      <hr />
-
-      <p>
-        Made with <span class="heart">❤️</span> by
-        <a href="https://github.com/CodingWithAnxiety" target="_blank"
-          >CodingWithAnxiety</a
-        >, <a href="https://github.com/kawinski" target="_blank">kawinski</a>,
-        and
-        <a href="https://github.com/FatCatClient" target="_blank"
-          >FatCatClient</a
-        >. <br />
-        Thank you for using Horizon!
-      </p>
-    </div>
-
-    <script>
-      // Use the Electron process global to get version information
-      document.addEventListener('DOMContentLoaded', () => {
-        // Using process since we have nodeIntegration: true
-        if (typeof process !== 'undefined') {
-          document.getElementById('app-version').textContent =
-            process.env.npm_package_version || 'N/A';
-          document.getElementById('electron-version').textContent =
-            process.versions.electron || 'N/A';
-          document.getElementById('chrome-version').textContent =
-            process.versions.chrome || 'N/A';
-          document.getElementById('node-version').textContent =
-            process.versions.node || 'N/A';
-        }
-      });
-    </script>
+    <div id="about"></div>
+    <script type="text/javascript" src="common.js"></script>
+    <script type="text/javascript" src="about.js"></script>
   </body>
 </html>
