--- a/electron/about.html
+++ b/electron/about.html
@@ -6,7 +6,7 @@
       http-equiv="Content-Security-Policy"
       content="default-src 'self' 'unsafe-inline'; img-src file: data: https://static.f-list.net"
     />
-    <title>Horizon</title>
+    <title>About Horizon</title>
     <link href="fa.css" rel="stylesheet" />
   </head>
   <body>
