--- a/electron/changelog.html
+++ b/electron/changelog.html
@@ -6,7 +6,7 @@
       http-equiv="Content-Security-Policy"
       content="default-src 'self' 'unsafe-inline'; img-src * data:; connect-src https://api.github.com https://horizn.moe"
     />
-    <title>Horizon</title>
+    <title>Changelog</title>
     <link href="fa.css" rel="stylesheet" />
   </head>
   <body>
