--- a/electron/settings.html
+++ b/electron/settings.html
@@ -7,7 +7,7 @@
       http-equiv="Content-Security-Policy"
       content="default-src 'self' 'unsafe-inline'; img-src file: data: https://static.f-list.net"
     />
-    <title>Horizon</title>
+    <title>Settings</title>
     <link href="fa.css" rel="stylesheet" />
   </head>
   <body>
